--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <li><a href="#section1">Sobre mi</a></li>
                 <li><a href="#section2">Capacidades</a></li>
                 <li><a href="#section3">Mi trabajo</a></li>
+                <li><a href="https://drive.google.com/file/d/1vDnGzrSYUs62OaIqhkZlYO5UElCRvKu_/view?usp=sharing" target="_blank">Currículum</a></li>
               </ul>
             </nav>
             <div class="social-network">
