--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
                 <li><a href="#section1">Sobre mi</a></li>
                 <li><a href="#section2">Capacidades</a></li>
                 <li><a href="#section3">Mi trabajo</a></li>
-                <li><a href="https://drive.google.com/file/d/1vDnGzrSYUs62OaIqhkZlYO5UElCRvKu_/view?usp=sharing" target="_blank">Currículum</a></li>
               </ul>
             </nav>
             <div class="social-network">
               <ul class="soial-icons">
+                <li>
+                  <a href="https://drive.google.com/file/d/1vDnGzrSYUs62OaIqhkZlYO5UElCRvKu_/view?usp=sharing" target="_blank">HV</i
+                  ></a>
+                </li>
                 <li>
                   <a href="https://www.facebook.com/profile.php?id=100086188910886" target="_blank"><i class="fa fa-facebook"></i
                   ></a>
